reorganize territory architecture and rename shared frontier systems